tests/ui/issues/issue-43926.stderr
error: link cfg must have a single predicate argument
  --> $DIR/issue-43926.rs:1:22
   |
LL | #[link(name = "foo", cfg())]
   |                      ^^^^^

error: aborting due to previous error

